Refactoring (use IMPUT element instead of BUTTON element)

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 <h2>Constraint</h2>
 <label>Length: <input type="number" max="80" min="4" step="1" value="8" id="field_length" /></label>
 <fieldset id="fieldset_typical_length">
-<button type="button" id="button_length8">8</button>
-<button type="button" id="button_length10">10</button>
-<button type="button" id="button_length12">12</button>
-<button type="button" id="button_length16">16</button>
-<button type="button" id="button_length20">20</button>
-<button type="button" id="button_length24">24</button>
-<button type="button" id="button_length32">32</button>
-<button type="button" id="button_length40">40</button>
-<button type="button" id="button_length50">50</button>
-<button type="button" id="button_length64">64</button>
+<input type="button" class="button_length" value="8" />
+<input type="button" class="button_length" value="10" />
+<input type="button" class="button_length" value="12" />
+<input type="button" class="button_length" value="16" />
+<input type="button" class="button_length" value="20" />
+<input type="button" class="button_length" value="24" />
+<input type="button" class="button_length" value="32" />
+<input type="button" class="button_length" value="40" />
+<input type="button" class="button_length" value="50" />
+<input type="button" class="button_length" value="64" />
 </fieldset>
 
 <fieldset id="fieldset_to_narrow">
