--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
+<meta charset="utf-8" />
 <title>Random String Generator</title>
-<link rel="stylesheet" type="text/css" href="./random_string_generator.css" />
-<script type="text/javascript" src="./random_string_generator.js"></script>
-</head><body id="random_string_generator">
+<link rel="stylesheet" href="random_string_generator.css" />
+<script async src="random_string_generator.js"></script>
+</head><body>
 
-<header>
 <h1>Random String Generator</h1>
-</header>
 
-<section>
 <h2>Result</h2>
 <label><input type="text" size="80" autocomplete="off" spellcheck="false" id="field_result"/></label>
 <button type="button" id="button_refresh">Refresh</button>
 <button type="button" id="button_undo">Undo</button>
 <button type="button" id="button_redo">Redo</button>
 <button type="button" id="button_selectall">SelectAll</button>
-</section>
 
-<section>
 <h2>Constraint</h2>
 <label>Length: <input type="number" max="80" min="4" step="1" value="8" id="field_length" /></label>
 <fieldset id="fieldset_typical_length">
@@ -87,8 +82,6 @@
 	<label><input type="checkbox"         />Question &OpenCurlyQuote;&quest;&CloseCurlyQuote;</label>
 </fieldset>
 </fieldset>
-
-</section>
 
 <footer>
 <p>Copyright &copy; 2012-2017 <a href="https://seaoak.jp">Seaoak</a>
