Add excluded characters ("8" and "B")

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
 <fieldset id="fieldset_to_narrow">
 <label><input type="checkbox" checked id="checkbox_avoid_misreading" />exclude
+ &OpenCurlyQuote;8&CloseCurlyQuote; and
+ &OpenCurlyQuote;B&CloseCurlyQuote; and
  &OpenCurlyQuote;I&CloseCurlyQuote; and
  &OpenCurlyQuote;l&CloseCurlyQuote; and
  &OpenCurlyQuote;1&CloseCurlyQuote; and
