Add a new constraint ("Number" required at least 10 percent of length)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
  &OpenCurlyQuote;O&CloseCurlyQuote; and
  &OpenCurlyQuote;0&CloseCurlyQuote; (avoid misreading)</label>
 <label><input type="checkbox" checked id="checkbox_alphabet_only_at_firstlast" />allow only an alphabet as the first/last character (help to select the whole string automatically)</label>
+<label><input type="checkbox" checked id="checkbox_number_required_at_least" />&quot;Number&quot; required at least 10% of length</label>
 </fieldset>
 
 <fieldset id="fieldset_to_widen">
