--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  &OpenCurlyQuote;1&CloseCurlyQuote; and
  &OpenCurlyQuote;O&CloseCurlyQuote; and
  &OpenCurlyQuote;0&CloseCurlyQuote; (avoid misreading)</label>
-<label><input type="checkbox" checked id="checkbox_alphabet_only_at_firstlast" />allow only an alphabet as the first/last character (help to select the whole string automatically)</label>
+<label><input type="checkbox" checked id="checkbox_alphabet_only_at_firstlast" />allow only limited alphabets as the first/last character (help to select the whole string automatically)</label>
 <label><input type="checkbox" checked id="checkbox_number_required_at_least" />&quot;Number&quot; required at least 10% of length</label>
 </fieldset>
 
