--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <label><input type="text" size="80" autocomplete="off" spellcheck="false" id="field_result"/></label>
 <button type="button" id="button_refresh">Refresh</button>
 <button type="button" id="button_selectall">SelectAll</button>
+<button type="button" id="button_copy_to_clipboard">Copy to clipboard</button>
 
 <h2>Constraint</h2>
 <label>Length: <input type="number" max="80" min="4" step="1" value="8" id="field_length" /></label>
